--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/AgenciaViajes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jxbrowser-5.1.jar=/home/gracho/javalibraries/jxbrowser-5.1.jar
+file.reference.license.jar=/home/gracho/javalibraries/license.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.PostgreSQLDriver.classpath}
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${file.reference.jxbrowser-5.1.jar}:\
+    ${file.reference.license.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
