--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.jxbrowser-5.1.jar=/home/gracho/NetBeansProjects/AgenciaViajes/lib/jxbrowser-5.1.jar
+file.reference.license.jar=/home/gracho/NetBeansProjects/AgenciaViajes/lib/license.jar
 user.properties.file=/home/gracho/.netbeans/8.0.2/build.properties
